--- a/source/_posts/安装大全.md
+++ b/source/_posts/安装大全.md
@@ -4,7 +4,8 @@ date: 2020-02-23 17:47:57
 categories:
 - Tool
 tags:
-- nodejs
+- Nodejs
+- Yarn
 ---
 
 ## nodejs
@@ -33,4 +34,15 @@ Acquire::http::Proxy "http://user:pwd@192.168.1.1:8080";
 
 // 最后再删除
 $ sudo rm /etc/apt/apt.conf.d/proxy.conf
+```
+
+## Yarn
+### linux
+[安装地址](https://yarn.bootcss.com/docs/install/#debian-stable)
+``` BASH
+$ curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
+$ echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+// 此处要加 apt-get update; 不然安装的版本是0.33
+$ sudo apt-get update && sudo apt-get install yarn -y
+$ yarn --version
 ```
