angular&vue&git

--- a/source/_posts/名词.md
+++ b/source/_posts/名词.md
@@ -6,3 +6,6 @@ tags:
 
 ## RBAC
 基于角色的访问控制（RBAC）是实施面向企业安全策略的一种有效的访问控制方式。
+
+## IDE
+集成开发环境（IDE，Integrated Development Environment ）是用于提供程序开发环境的应用程序，一般包括代码编辑器、编译器、调试器和图形用户界面等工具。
