--- a/source/_posts/重学前端.md
+++ b/source/_posts/重学前端.md
@@ -24,8 +24,42 @@ tags:
 - 文法
 - 执行过程
 
+用一定的词法和语法，表达一定语义，从而操作运行时。
+
+JavaScript 的类型系统就是它的 7 种基本类型和 7 种语言类型，实例就是它的内置对象部分
+
+执行过程我们则需要按照从大结构到小结构的角度讲解，从最顶层的程序与模块、事件循环和微任务，到函数、再到语句级的执行。我们从粗到细地了解执行过程。
+
+实例部分，对 JavaScript 来说类似基础库，JavaScipt 的内置对象多达 150 以上，考虑到我们即使逐次讲解也必定不如 MDN 更加细致全面，所以我们会从应用和机制的角度，挑选其中几个体系来讲解。
+
+## 类型
+
+null 是 JavaScript 关键字
+
+- 为什么有的编程规范要求用 void 0 代替 undefined？
+  JavaScript 的代码 undefined 是一个变量（变量可以被赋值改变），而并非是一个关键字，这是 JavaScript 语言公认的设计失误之一，所以，我们为了避免无意中被篡改，我建议使用 void 0 来获取 undefined 值。
+
+- 字符串有最大长度吗？
+String 有最大长度是 2^53 - 1
+
+### 7种语言类型
+Undefined；Null；Boolean；String；Number；Symbol；Object。
+
+### 规范类型
+List 和 Record： 用于描述函数传参过程。
+Set：主要用于解释字符集等。
+Completion Record：用于描述异常、跳出等语句执行过程。
+Reference：用于描述对象属性访问、delete 等。
+Property Descriptor：用于描述对象的属性。
+Lexical Environment 和 Environment Record：用于描述变量和作用域。
+Data Block：用于描述二进制数据。
 
 
+## 对象
+英文中：Object（对象）是一切事物的总称；这和面向对象编程的抽象思维有互通之处
+中文中：当作一个专业名词
+
+面向对象编程也被认为是：更接近人类思维模式的一种编程范式
 
 
 
