--- a/source/_posts/重学前端.md
+++ b/source/_posts/重学前端.md
@@ -5,6 +5,9 @@ categories:
 - Front-End
 tags:
 - Front-End
+- Html
+- CSS
+- JavaScript
 ---
 
 [重学前端-winter](https://time.geekbang.org/column/article/77345)
@@ -13,6 +16,10 @@ tags:
 ## 发展史
 2006
 
+## 目标
+- 带你摸索出适合自己的前端**学习方法**；
+- 帮助你建立起前端技术的**知识架构**；
+- 让你理解前端技术背后的**核心思想**。
 
 ## 图谱
 `{% asset_img relearn.jpg %}`
@@ -54,17 +61,158 @@ Property Descriptor：用于描述对象的属性。
 Lexical Environment 和 Environment Record：用于描述变量和作用域。
 Data Block：用于描述二进制数据。
 
+### String
+- 转义字符
+https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/String
+- 字符串操作方法
+https://segmentfault.com/a/1190000016603159#item-1
+
+### Number
+- NaN not a number
+``` js
+'20a'* 5 ; // NaN
+```
+
+- isNaN
+``` js
+isNaN('123')   // false 能转换
+```
+
+防止除以0出错 ，引入无穷大小
+- Infinity，无穷大；
+- -Infinity，负无穷大。
+
+``` js
+console.log('prototype', 5 / 0); // infinity
+console.log('prototype', 5 / -0); // -infinity
+```
+
+比较浮点数的方法
+检查等式左右两边差的绝对值是否小于最小精度
+``` js
+console.log( Math.abs(0.1 + 0.2 - 0.3) <= Number.EPSILON);
+```
+
+### 类型转换
+用 === 比较
+
+#### StringToNumber
+- Number
+- parseInt 
+- parseFloat
+
+#### 装箱和拆箱
+所谓装箱转换，正是把基本类型转换为对应的对象，它是类型转换中一种相当重要的种类。
+所谓的装箱，是指将基本数据类型转换为对应的引用类型的操作。而装箱又分为隐式装箱和显式装箱。
+##### 隐式装箱
+``` js
+var s1 = 'call_me_R'; // 隐式装箱
+var s2 = s1.substring(2);
+```
+
+``` js
+# 1
+var s1 = new String('call_me_R');
+# 2
+var s2 = s1.substring(2);
+# 3
+s1 = null;
+```
+##### 显示装箱
+``` js
+var name = new String('call_me_R');
+```
+
+##### 拆箱
+``` js
+var objNum = new Number(64);
+var objStr = new String('64');
+console.log(typeof objNum); // object
+console.log(typeof objStr); // object
+# 拆箱
+console.log(typeof objNum.valueOf()); // number 基本的数字类型，想要的
+console.log(typeof objStr.toString()); // string 基本的数据类型，想要的
+```
+
+### 7种规范类型
+- List 和 Record： 用于描述函数传参过程。
+- Set：主要用于解释字符集等。
+- Completion Record：用于描述异常、跳出等语句执行过程。
+- Reference：用于描述对象属性访问、delete 等。
+- Property Descriptor：用于描述对象的属性。
+- Lexical Environment 和 Environment Record：用于描述变量和作用域。
+- Data Block：用于描述二进制数据。
+
+
 
 ## 对象
+在 JavaScript 中，对象的定义是“属性的集合”。
+
 英文中：Object（对象）是一切事物的总称；这和面向对象编程的抽象思维有互通之处
 中文中：当作一个专业名词
 
 面向对象编程也被认为是：更接近人类思维模式的一种编程范式
 
+早点方式：原型
+后来模仿Java：加入了new 、this
+
+描述对象
+- 使用类的方式，Java，C++
+- 基于原型，JavaScript
+
+原型系统就更多与高动态性语言配合，并且多数基于原型的语言提倡运行时的原型修改
+
+对象的特征
+- 对象具有唯一标识性：即使完全相同的两个对象，也并非同一个对象。（内存地址）
+- 对象有状态：对象具有状态，同一对象可能处于不同状态之下。
+- 对象具有行为：即对象的状态，可能因为它的行为产生变迁。
+
+``` js
+var o1 = { a: 1 };
+var o2 = { a: 1 };
+console.log(o1 == o2); // false
+```
+
+JavaScript 中的行为和状态都能用属性来抽象。
+``` js
+var o = { 
+  d: 1, // 属性
+  f() { console.log(this.d); } // 属性
+};
+```
+
+**在实现了对象基本特征的基础上, 我认为，JavaScript 中对象独有的特色是：对象具有高度的动态性，这是因为 JavaScript 赋予了使用者在运行时为对象添改状态和行为的能力。**
+JavaScript 允许运行时向对象添加属性，这就跟绝大多数基于类的、静态的对象设计完全不同。
+``` js
+var o = { a: 1 }; 
+o.b = 2;
+console.log(o.a, o.b); //1 2
+```
+
+```js
+var o = { get a() { return 1 } };
+console.log(o.a); // 1
+```
+
+
+但是 JavaScript 这样的半吊子模拟，缺少了继承等关键特性，导致大家试图对它进行修补，进而产生了种种互不相容的解决方案。庆幸的是，从 ES6 开始，JavaScript 提供了 class 关键字来定义类，尽管，这样的方案仍然是基于原型运行时系统的模拟，但是它修正了之前的一些常见的“坑”，统一了社区的方案，这对语言的发展有着非常大的好处。实际上，我认为“基于类”并非面向对象的唯一形态，如果我们把视线从“类”移开，Brendan 当年选择的原型系统，就是一个非常优秀的抽象对象的形式。
 
 
 
+# 一些不熟悉的概念
+## instanceof
+instanceof 运算符用于检测构造函数的 prototype 属性是否出现在某个实例对象的原型链上。
+``` js
+function Car(make, model, year) {
+  this.make = make;
+  this.model = model;
+  this.year = year;
+}
+const auto = new Car('Honda', 'Accord', 1998);
 
+console.log(auto instanceof Car);
+// expected output: true
 
-
-
+console.log(auto instanceof Object);
+// expected output: true
+```
