--- a/source/_posts/名词.md
+++ b/source/_posts/名词.md
@@ -9,3 +9,6 @@ tags:
 
 ## IDE
 集成开发环境（IDE，Integrated Development Environment ）是用于提供程序开发环境的应用程序，一般包括代码编辑器、编译器、调试器和图形用户界面等工具。
+
+## RegExp
+正规表达式（英语：Regular Expression，常简写为regex、regexp或RE）
