--- a/source/_posts/重学前端.md
+++ b/source/_posts/重学前端.md
@@ -98,7 +98,7 @@ console.log( Math.abs(0.1 + 0.2 - 0.3) <= Number.EPSILON);
 
 #### StringToNumber
 - Number
-- parseInt 
+- parseInt
 - parseFloat
 
 #### 装箱和拆箱
@@ -175,7 +175,7 @@ console.log(o1 == o2); // false
 
 JavaScript 中的行为和状态都能用属性来抽象。
 ``` js
-var o = { 
+var o = {
   d: 1, // 属性
   f() { console.log(this.d); } // 属性
 };
@@ -184,7 +184,7 @@ var o = {
 **在实现了对象基本特征的基础上, 我认为，JavaScript 中对象独有的特色是：对象具有高度的动态性，这是因为 JavaScript 赋予了使用者在运行时为对象添改状态和行为的能力。**
 JavaScript 允许运行时向对象添加属性，这就跟绝大多数基于类的、静态的对象设计完全不同。
 ``` js
-var o = { a: 1 }; 
+var o = { a: 1 };
 o.b = 2;
 console.log(o.a, o.b); //1 2
 ```
@@ -207,6 +207,137 @@ console.log(o.a); // 1
 
 由于我们这里主要讲 JavaScript 语言，那么采纳 JSC 引擎的术语，我们把宿主发起的任务称为宏观任务，把 JavaScript 引擎发起的任务称为微观任务。
 
+``` js
+var r = new Promise(function(resolve, reject){
+    console.log("a");
+    resolve()
+});
+r.then(() => console.log("c"));
+console.log("b")
+```
+abc
+但是 Promise 的 resolve 始终是异步操作
+
+通过一系列的实验，我们可以总结一下如何分析异步执行的顺序：
+- 首先我们分析有多少个宏任务；
+- 在每个宏任务中，分析有多少个微任务；
+- 根据调用次序，确定宏任务中的微任务执行次序；
+- 根据宏任务的触发规则和调用次序，确定宏任务的执行次序；
+- 确定整个顺序。
+
+微任务优先的原理
+
+### async/await
+async 函数强大之处在于，它是可以嵌套的。
+``` js
+async function foo2(){
+  await foo("a");
+  await foo("b");
+}
+```
+
+## 闭包和执行环境
+
+### 闭包定义
+- 环境部分
+  + 环境：函数的词法环境（执行上下文的一部分）
+  + 标识符列表：函数中用到的未声明的变量
+- 表达式部分：函数体
+
+实际上 JavaScript 中跟闭包对应的概念就是“函数”
+
+MDN解释
+函数和对其周围状态（lexical environment，词法环境）的引用捆绑在一起构成闭包（closure）。也就是说，闭包可以让你从内部函数访问外部函数作用域。在 JavaScript 中，每当函数被创建，就会在函数生成时生成闭包。
+
+``` js
+document.getElementById('size-12').onclick = makeSize(10);
+document.getElementById('size-14').onclick = makeSize(14);
+document.getElementById('size-16').onclick = makeSize(20);
+
+function makeSize(size) {
+  // 方法执行后 绑定的是 值
+  // document.body.style.fontSize = size + 'px';
+  console.log('size', size);
+
+  // 方法执行后，绑定的是 方法
+  return function() {
+    document.body.style.fontSize = size + 'px';
+  };
+}
+```
+
+### 执行上下文：执行的基础设施
+在 ES2018 中，执行上下文又变成了这个样子，this 值被归入 lexical environment，但是增加了不少内容。
+- lexical environment：词法环境，当获取变量或者 this 值时使用。
+- variable environment：变量环境，当声明变量时使用。
+- code evaluation state：用于恢复代码执行位置。
+- Function：执行的任务是函数时使用，表示正在被执行的函数。
+- ScriptOrModule：执行的任务是脚本或者模块时使用，表示正在被执行的代码。
+- Realm：使用的基础库和内置对象实例。
+- Generator：仅生成器上下文有这个属性，表示当前生成器。
+
+#### var 声明与赋值
+var 声明作用域函数执行的作用域。也就是说，var 会穿透 for 、if 等语句。
+
+在只有 var，没有 let 的旧 JavaScript 时代，诞生了一个技巧
+IIFE（ 立即调用函数表达式）
+当函数变成立即执行的函数表达式时，表达式中的变量不能从外部访问。
+``` js
+(function () {
+    var name = "Barry";
+})();
+// 无法从外部访问变量 name
+name // 抛出错误："Uncaught ReferenceError: name is not defined"
+```
+
+推荐 void 关键字
+``` js
+void function(){
+  var a = 1; //code
+}();
+console.log('a', a); // a is not defined
+```
+
+坚定地反对在任何场景下使用 with
+
+#### this 关键字
+this 是执行上下文中很重要的一个组成部分。同一个函数调用方式不同，得到的 this 值也不同
+
+`调用函数时使用的引用，决定了函数执行时刻的 this 值。`
+
+改为箭头函数后，不论用什么引用来调用它，都不影响它的 this 值。
+``` js
+
+const showThis = () => {
+    console.log(this);
+}
+
+var o = {
+    showThis: showThis
+}
+
+showThis(); // global
+o.showThis(); // global
+```
+
+### completion record 类型
+JavaScript 正是依靠语句的 Completion Record 类型，方才可以在语句的复杂嵌套结构中，实现各种控制。接下来我们要来了解一下 JavaScript 使用 Completion Record 类型，控制语句执行的过程。
+
+普通语句执行后，会得到 [[type]] 为 normal 的 Completion Record，JavaScript 引擎遇到这样的 Completion Record，会继续执行下一条语句。
+
+这些语句中，只有表达式语句会产生 [[value]]，当然，从引擎控制的角度，这个 value 并没有什么用处。
+
+如果你经常使用 Chrome 自带的调试工具，可以知道，输入一个表达式，在控制台可以得到结果，但是在前面加上 var，就变成了 undefined。
+
+`{% asset_img completion.png %}`
+Chrome 控制台显示的正是语句的 Completion Record 的[[value]]。
+
+
+## 语法
+### 脚本和模块
+首先，JavaScript 有两种源文件，一种叫做脚本，一种叫做模块。这个区分是在 ES6 引入了模块机制开始的，在 ES5 和之前的版本中，就只有一种源文件类型（就只有脚本）。
+脚本是可以由浏览器或者 node 环境引入执行的，而模块只能由 JavaScript 代码用 import 引入执行。
+
 # 一些不熟悉的概念
 ## instanceof
 instanceof 运算符用于检测构造函数的 prototype 属性是否出现在某个实例对象的原型链上。
@@ -224,3 +355,178 @@ console.log(auto instanceof Car);
 console.log(auto instanceof Object);
 // expected output: true
 ```
+
+## 函数声明与函数表达式
+``` js
+// 函数声明
+function funDeclaration(type){
+  return type==="Declaration";
+}
+
+// 函数表达式
+var funExpression = function(type){
+  return type==="Expression";
+}
+
+funDeclaration("Declaration");//=> true
+function funDeclaration(type){
+    return type==="Declaration";
+}
+funExpression("Expression");//=>error
+var funExpression = function(type){
+    return type==="Expression";
+}
+```
+用函数声明创建的函数funDeclaration可以在funDeclaration定义之前就进行调用
+而用函数表达式创建的funExpression函数不能在被赋值之前进行调用。
+
+
+# HTML
+语义标签
+“用对”比“不用”好，“不用”比“用错”好。
+
+## ruby标签
+``` html
+<ruby>
+  汉 <rp>(</rp><rt>han</rt><rp>)</rp>
+  字 <rp>(</rp><rt>zi</rt><rp>)</rp>
+</ruby>
+```
+
+## hgroup标签
+h1-h6 是最基本的标题，它们表示了文章中不同层级的标题。有些时候，我们会有副标题，为了避免副标题产生额外的一个层级，我们使用 hgroup 标签。
+``` html
+<hgroup>
+<h1>JavaScript对象</h1>
+<h2>我们需要模拟类吗？</h2>
+</hgroup>
+<p>balah balah</p>
+```
+
+## section标签
+从 HTML 5 开始，我们有了 section 标签，这个标签可不仅仅是一个“有语义的 div”，它会改变 h1-h6 的语义。section 的嵌套会使得其中的 h1-h6 下降一级，因此，在 HTML5 以后，我们只需要 section 和 h1 就足以形成文档的树形结构：
+``` html
+<section>
+  <h1>HTML语义</h1>
+  <p>balah balah balah balah</p>
+  <section>
+      <h1>弱语义</h1>
+      <p>balah balah</p>
+  </section>
+  <section>
+      <h1>结构性元素</h1>
+      <p>balah balah</p>
+  </section>
+</section>
+```
+
+## 典型body结构
+``` html
+<body>
+  <header>
+      <nav>
+          ……
+      </nav>
+  </header>
+  <aside>
+      <nav>
+          ……
+      </nav>
+  </aside>
+  <section>……</section>
+  <section>……</section>
+  <section>……</section>
+  <footer>
+      <address>……</address>
+  </footer>
+</body>
+```
+
+## 典型多文章结构
+多篇新闻展示在同一个新闻专题页面中，这种类似报纸的多文章结构适合用 article 来组织。
+``` html
+<body>
+  <header>……</header>
+  <article>
+      <header>……</header>
+      <section>……</section>
+      <section>……</section>
+      <section>……</section>
+      <footer>……</footer>
+  </article>
+  <article>
+      ……
+  </article>
+  <article>
+      ……
+  </article>
+  <footer>
+      <address></address>
+  </footer>
+</body>
+```
+
+## aside标签
+aside 表示跟文章主体不那么相关的部分，它可能包含导航、广告等工具性质的
+aside 很容易被理解为侧边栏，实际上二者是包含关系，侧边栏是 aside，aside 不一定是侧边栏。
+
+## address标签
+<address> 元素 表示其中的 HTML 提供了某个人或某个组织（等等）的联系信息。
+``` html
+<p>Contact the author of this page:</p>
+
+<address>
+  <a href="mailto:jim@rock.com">jim@rock.com</a><br>
+  <a href="tel:+13115552368">(311) 555-2368</a>
+</address>
+```
+
+address 明确地只关联到 article 和 body。
+
+## 引用标签
+在 HTML 中，有三个跟引述相关的标签 blockquote 表示段落级引述内容，q 表示行内的引述内容，cite 表示引述的作品名。
+
+## time标签
+``` html
+Retrieved <time datetime="2015-07-16">16 July 2015</time>.
+```
+
+## figure，figcaption
+``` html
+<figure>
+ <img src="https://.....440px-NeXTcube_first_webserver.JPG"/>
+ <!-- 对图片的描述 -->
+ <figcaption>The NeXT Computer used by Tim Berners-Lee at CERN.</figcaption>
+</figure>
+```
+这种插入文章中的内容，不仅限图片，代码、表格等，只要是具有一定自包含性（类似独立句子）的内容，都可以用 figure。这里面，我们用 figcaption 表示内容的标题，当然，也可以没有标题。
+
+## dfn
+表示术语的一个定义。
+``` html
+<dfn>Internet</dfn> is a global system of interconnected computer networks.
+```
+
+# css
+## 变量
+在CSS Variables 标准中，以双中划线开头的属性被当作变量，与之配合的则是 var 函数：
+``` css
+:root {
+  --main-color: #06c;
+  --accent-color: #006;
+}
+/* The rest of the CSS file */
+#foo h1 {
+  color: var(--main-color);
+}
+```
+
+
+
+
+
+
+
+
+
+
