--- a/source/_posts/重学前端.md
+++ b/source/_posts/重学前端.md
@@ -507,6 +507,37 @@ Retrieved <time datetime="2015-07-16">16 July 2015</time>.
 <dfn>Internet</dfn> is a global system of interconnected computer networks.
 ```
 
+## 元信息类标签
+### base 标签
+base 标签最多只有一个，它改变全局的链接地址，它是一个非常危险的标签，容易造成跟 JavaScript 的配合问题，所以在实际开发中，我比较建议你使用 JavaScript 来代替 base 标签。
+
+### meta标签
+从 HTML5 开始，为了简化写法，meta 标签新增了 charset 属性。添加了 charset 属性的 meta 标签无需再有 name 和 content。
+charset 型 meta 标签非常关键，它描述了 HTML 文档自身的编码形式。因此，我建议这个标签放在 head 的第一个。
+``` html
+<html>
+<head>
+<meta charset="UTF-8">
+……
+```
+
+#### viewport
+- width：页面宽度，可以取值具体的数字，也可以是 device-width，表示跟设备宽度相等。
+- height：页面高度，可以取值具体的数字，也可以是 device-height，表示跟设备高度相等。
+- initial-scale：初始缩放比例。
+- minimum-scale：最小缩放比例。
+- maximum-scale：最大缩放比例。
+- user-scalable：是否允许用户缩放。
+
+#### 其他预定义
+- uthor: 页面作者。
+- description：页面描述，这个属性可能被用于搜索引擎或者其它场合。
+- generator: 生成页面所使用的工具，主要用于可视化编辑器，如果是手写 HTML 的网页，不需要加这个 meta。
+- keywords: 页面关键字，对于 SEO 场景非常关键。
+- referrer: 跳转策略，是一种安全考量。
+- theme-color: 页面风格颜色，实际并不会影响页面，但是浏览器可能据此调整页面之外的 UI（如窗口边框或者 tab 的颜色）。
+
+
 # css
 ## 变量
 在CSS Variables 标准中，以双中划线开头的属性被当作变量，与之配合的则是 var 函数：
@@ -521,12 +552,21 @@ Retrieved <time datetime="2015-07-16">16 July 2015</time>.
 }
 ```
 
+## 函数
+### calc()
+calc() 函数是基本的表达式计算，它支持加减乘除四则运算。在针对维度进行计算时，calc() 函数允许不同单位混合运算，这非常的有用。
+``` css
+section {
+  float: left;
+  margin: 1em; border: solid 1px;
+  width: calc(100%/3 - 2*1em - 2*1px);
+}
+```
 
+### max()、min() 和 clamp()
+max()、min() 和 clamp() 则是一些比较大小的函数，max() 表示取两数中较大的一个，min() 表示取两数之中较小的一个，clamp() 则是给一个值限定一个范围，超出范围外则使用范围的最大或者最小值。
 
-
-
-
-
-
+### toggle()
+toggle() 函数在规则选中多于一个元素时生效，它会在几个值之间来回切换，比如我们要让一个列表项的样式圆点和方点间隔出现，可以使用下面代码：
 
 
