--- a/source/_posts/安装大全.md
+++ b/source/_posts/安装大全.md
@@ -46,3 +46,7 @@ $ echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sour
 $ sudo apt-get update && sudo apt-get install yarn -y
 $ yarn --version
 ```
+
+### init
+默认初始化
+yarn init -y 
