--- a/source/_posts/重学前端.md
+++ b/source/_posts/重学前端.md
@@ -266,6 +266,8 @@ function makeSize(size) {
 }
 ```
 
+闭包：实现了私有变量，避免内存泄漏
+
 ### 执行上下文：执行的基础设施
 在 ES2018 中，执行上下文又变成了这个样子，this 值被归入 lexical environment，但是增加了不少内容。
 - lexical environment：词法环境，当获取变量或者 this 值时使用。
