--- a/source/_posts/重学前端.md
+++ b/source/_posts/重学前端.md
@@ -92,6 +92,74 @@ console.log('prototype', 5 / -0); // -infinity
 ``` js
 console.log( Math.abs(0.1 + 0.2 - 0.3) <= Number.EPSILON);
 ```
+### number
+双精度浮点类型 doubel float
+IEEE 754 
+- Sign(1)
+- exponent(11) 指数
+- fraction(52), 1个1，后面52位
+
+0.1 + 0.2 != 0.3  是由于： 三次转换 + 一次精度损失 造成的
+
+#### grammar
+- DecimalLiteral
+  + 0
+  + 0.
+  + .2
+  + 1e3
+- BinaryIntegerLiteral
+  + 0b111
+- OctalIntegerLiteral
+  + 0o10
+- HexIntegerLiteral
+  + 0xFF
+
+##### 特殊字符-微语法
+回车 \n
+Tab  \t
+反斜杠 \\
+\a   a
+
+反斜杠
+里面可以加回车
+
+### String
+string 串      
+- character 字符
+- code point 码点
+- encoding 编码方式
+
+#### 编码集
+- ASCII
+- Unicode
+- UCS
+- GB
+  + GB2312
+  + GBK(GB13000)
+  + GB18030
+- ISO-8859
+- BIG5
+
+#### 编码方式
+UTF
+- UTF 8
+- UTF 16
+
+#### 反引号
+语法结构，而不是词法结构
+string-template
+&#39;ab${x}cd&#39;
+
+
+### null
+有值
+typeof null  ===> Object
+
+### undefined
+没有人定义过它的值
+
+### symbol
+用于Object属性名
 
 ### 类型转换
 用 === 比较
