--- a/source/_posts/重学前端.md
+++ b/source/_posts/重学前端.md
@@ -67,6 +67,49 @@ https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects
 - 字符串操作方法
 https://segmentfault.com/a/1190000016603159#item-1
 
+string 串      
+- character 字符
+- code point 码点 （计算机中character 用次codepoint 表示）
+- encoding 编码方式
+
+字形：一种形象的表示，比如 A，B，中文
+
+{% label ib_purple@code point %}
+codePointAt() 方法返回 一个 Unicode 编码点值的非负整数。
+``` js
+'a'.codePointAt() // 97
+```
+String.fromCodePoint() 静态方法返回使用指定的代码点序列创建的字符串。
+``` js
+String.fromCodePoint(97); // a
+```
+
+`计算机存储的基本单位是字节`
+每个字  =>  存几个字节
+
+
+#### 编码集
+- ASCII
+- Unicode
+- UCS
+- GB
+  + GB2312
+  + GBK(GB13000)
+  + GB18030
+- ISO-8859
+- BIG5
+
+#### 编码方式
+UTF
+- UTF 8
+- UTF 16
+
+#### 反引号
+语法结构，而不是词法结构
+string-template
+&#39;ab${x}cd&#39;
+
+
 ### Number
 - NaN not a number
 ``` js
@@ -122,34 +165,6 @@ Tab  \t
 
 反斜杠
 里面可以加回车
-
-### String
-string 串      
-- character 字符
-- code point 码点
-- encoding 编码方式
-
-#### 编码集
-- ASCII
-- Unicode
-- UCS
-- GB
-  + GB2312
-  + GBK(GB13000)
-  + GB18030
-- ISO-8859
-- BIG5
-
-#### 编码方式
-UTF
-- UTF 8
-- UTF 16
-
-#### 反引号
-语法结构，而不是词法结构
-string-template
-&#39;ab${x}cd&#39;
-
 
 ### null
 有值
