--- a/source/_posts/重学前端.md
+++ b/source/_posts/重学前端.md
@@ -142,6 +142,11 @@ IEEE 754
 
 0.1 + 0.2 != 0.3  是由于： 三次转换 + 一次精度损失 造成的
 
+#### number to string
+number.toString();
+String(numer)
+"" + number
+
 #### grammar
 - DecimalLiteral
   + 0
@@ -302,6 +307,19 @@ Array
 
 Host Object
 浏览器支持
+
+#### 固有对象
+``` js
+// 搜索匹配。返回一个结果数组或 null。
+const REGEXP = /\d{4}/;
+const code = REGEXP.exec(Math.random())
+
+// 其他方法返回一个四位数字字符串
+re.test(Math.random());RegExp.lastMatch;
+"9047"
+re.exec(Math.random());
+["9091", index: 2, input: "0.9091852183664082", groups: undefined]
+```
 
 ### symbol
 用于Object属性名
