--- a/source/_posts/重学前端.md
+++ b/source/_posts/重学前端.md
@@ -324,6 +324,29 @@ re.exec(Math.random());
 ["9091", index: 2, input: "0.9091852183664082", groups: undefined]
 ```
 
+``` js
+1e10    // 1 * 10 ^ 10
+10000000000
+```
+
+Math 方法
+- 向上取整
+Math.ceil() 
+函数返回大于或等于一个给定数字的最小整数。
+
+- 向下取整
+Math.floor() 返回小于或等于一个给定数字的最大整数。
+
+
+    // TODO： file
+    console.log('path', f0.path);
+    this.securtyUrl = this.sanitizer.bypassSecurityTrustUrl(f0.path);
+    console.log('securtyUrl', this.securtyUrl);
+
+1
+
+    this.
+
 ### symbol
 用于Object属性名
 
