--- a/source/_posts/重学前端.md
+++ b/source/_posts/重学前端.md
@@ -564,6 +564,15 @@ console.log('a', a); // a is not defined
 坚定地反对在任何场景下使用 with
 
 #### this 关键字
+[JavaScript 的 this 原理](http://www.ruanyifeng.com/blog/2018/06/javascript-this.html)
+背景：函数是单独在内存中存储，所以可以在不同的运行环境执行，现在想在函数体内部获得当前的运行环境（context）。
+
+this设计目的：在函数体内部，指代函数当前的运行环境。
+
+内存的数据结构
+这时，引擎会将函数单独保存在内存中，然后再将函数的地址赋值给foo属性的value属性。
+`{% asset_img js_this.png %}`
+
 this 是执行上下文中很重要的一个组成部分。同一个函数调用方式不同，得到的 this 值也不同
 
 `调用函数时使用的引用，决定了函数执行时刻的 this 值。`
