--- a/source/_posts/重学前端.md
+++ b/source/_posts/重学前端.md
@@ -48,7 +48,10 @@ JavaScript 的类型系统就是它的 7 种基本类型和 7 种语言类型，
 String 有最大长度是 2^53 - 1
 
 ### 7种基本(语言)类型
-Undefined；Null；Boolean；String；Number；Symbol；Object。
+六种简单（原始）类型：
+Undefined；Null；Boolean；String；Number；Symbol。
+一种复杂类型
+Object。
 
 {% label ib_yellow@BigInt制定中 %}
 
