--- a/source/_posts/算法.md
+++ b/source/_posts/算法.md
@@ -125,6 +125,51 @@ linkList.print();
 console.log(linkList.length);
 ```
 
+## 位运算
+<< >> & | 位运算，二进制位置上的计算
+
+<< 左移动一位 意味着：乘以2
+1<<1 = 2
+2<<1 = 4
+3<<2 = 3*2*2 = 12
+
+>> 右移一位 意味着：整除以2
+8>>1 = 4
+9>>1 = 4
+
+&  按位与 两个同时是1的时候，结果是1 否则是0
+｜ 按位或 两个同时是0的时候，结果是0 否则是1
+
+文本，html标签，组件
+text = 001
+element = 010
+component = 100
+在二进制位上标记某个属性是1
+
+| 进行授权
+& 进行校验
+cms中运用到权限管理：超级管理员，管理员，经理，运营
+同时拥有文本，html两个属性
+let target1 = text | element
+001
+010
+011
+
+target1 & text
+011 & 001
+结果：001，证明有text这个权限
+
+target1 & element
+011 & 010
+结果：010，证明有element这个权限 
+
+target1 & component
+011 & 100
+结果：000 没有这个权限
+
+
+
+
 # 例题
 ## 两数之和
 https://leetcode-cn.com/problems/two-sum/
@@ -193,4 +238,82 @@ var removeElements = function(head, val) {
     }
     return ele.next
 };
+```
+
+## 环形链表
+leetcode141
+```js
+var hasCycle = function(head) {
+    // 链表里面的值是唯一的吗
+    // 方法一：O(n)
+    while(head.next) 这种就不行了
+    设置一个存储集合
+    let cache = new Set()
+    while(head){
+        if(cache.has(head)){
+            // 有环
+            return true
+        } else {
+            cache.add(head)
+            head = head.next
+        }
+    }
+    return false
+
+    
+    //方法二：快慢双指针 O(1)
+    // 场景：跑圈，如果没有环两者不会遇见，如果有环两者会遇见
+    let slow = head
+    let fast = head
+    while(fast && fast.next){
+        fast = fast.next.next
+        slow = slow.next
+        if(slow === fast) return true
+    }
+    return false 
+};
+```
+
+## LruCache
+Least Recently Used 近期最少使用算法
+
+vue keep-alive 中使用，组件缓存，数据结构原理是基于链表做的
+目标：保存组件的状态
+设计：缓存固定数量的模块
+组件淘汰机制用的最多就是 LRU-cache
+
+### 淘汰机制
+#### 先进先出
+first in, first out
+任务队列有四个数据，第五个数据来了后，添加到第一个，淘汰最后一个
+[1,2,3,4] -> [5,1,2,3]
+
+#### L
+{
+  a:1,
+  b:3,
+  c:5,
+  d:10
+}
+如果来了一个e，现在要把最少的踢掉
+{
+  b:3,
+  c:5,
+  d:10,
+  e:1
+}
+太耗计算量和内存，要做计算统计
+
+#### LruCache
+[1,2,3,4] 来了一个3 -> [3,1,2,4]
+[1,2,3,4] 来了一个5 -> [5,1,2,3]
+
+用的链表
+删除、新增比较多
+
+``` ts
+// vue 源码：lru-cache
+if (max && keys.size > parseInt(max as string, 10)) {
+  pruneCacheEntry(keys.values().next().value)
+}
 ```
