--- a/source/_posts/命令行工具.md
+++ b/source/_posts/命令行工具.md
@@ -10,9 +10,22 @@ tags:
 
 ## 终端主题
 {% asset_img terminal_theme.png %}
-配置 zsh 的主题为 ys
+
+第一步 → 把 oh-my-zsh 项目 Clone 下来：
+
+git clone https://github.com/robbyrussell/oh-my-zsh.git ~/.oh-my-zsh
+第二步 → 复制 .zshrc
+
+`cp ~/.oh-my-zsh/templates/zshrc.zsh-template ~/.zshrc`
+第三步 → 更改你的默认 Shell
+
+chsh -s /bin/zsh
+
+
+## 配置 zsh 的主题为 ys
 ``` BASH
-$ vim ~/.zshrc #ZSH_THEME="ys"
+$ vim ~/.zshrc 
+ZSH_THEME="ys"
 
 // 生效
 $ source ~/.zshrc
