--- a/source/_posts/工具设置.md
+++ b/source/_posts/工具设置.md
@@ -6,7 +6,7 @@ categories:
 tags:
 - Tool
 ---
-## WebStorm
+# WebStorm
 ### 主题设置
 主题样式在文件夹 ikyu/tool
 导入方法：file–>Import Setting–>*.jar(找到下载的主题包)
@@ -23,6 +23,11 @@ Font: Ayuthaya
 Editor > Font
 Size: 14
 
-## Chrome
+# Chrome
 ### 搜索文件
 cmd + p
+
+# process On
+调整页面大小
+`{% asset_img processon.png %}`
+
